example-service.config.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend # Selection key = app, value = frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
